--- a/mis321-ttv-web-app.csproj
+++ b/mis321-ttv-web-app.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="mysql.data" Version="8.2.0" />
   </ItemGroup>
   
 </Project>
